Fixed position to remove scrollbars

--- a/public/styles/experiments.css
+++ b/public/styles/experiments.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   color: white;
+  padding: fixed;
 }
 
 #info {
